--- a/Contact.html
+++ b/Contact.html
@@ -27,7 +27,7 @@
     <textarea name="name" rows="10" cols="30"></textarea><br>
     <label>Do you want to submit the form?</label>
     <input type="checkbox" id="submit" ><br>
-    <input type="submit"> <button><a href="MYweb.html">Back</a></button>
+    <input type="submit"> <button><a href="index.html">Back</a></button>
   </table>
   </form>
 </body>
