--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <table>
     <tr>
-      <td><img src="image\cutepuppy.png" alt="cute puppy" width ="150" height="150"></td>
+      <td><img src="image/cutepuppy.png" alt="cute puppy" width ="150" height="150"></td>
       <td><h1>Deepanshu Sharma</h1>
         <p><em>Persuing my <b>B.Tech from ECE 4th Year</b></em><br>
         I am a student and passionate developer and i ❤ coffee.</p></td>
