--- a/Contact.html
+++ b/Contact.html
@@ -15,21 +15,19 @@
   <form  action="mailto:deepanshusharma1457@gmail.com" method="post" enctype="text/plain"> <br>
     <table>
       <tr>
-        <td><label>Your Name</label>
-          <input type="text" name="Name"></td>
+        <td>
+          <label for="username"> Name: </label>
+          <input type="text" name="Name" id="username" placeholder="Your Name"></td>
       </tr>
       <tr>
-        <td><label> Email </label>
-          <input type="email" name="Your Email"></td>
+        <td><label for="email"> Email: </label>
+          <input id="email" type="email" placeholder="Enter your Email"></td>
       </tr>
       <table>
-    <label>Your message</label><br>
-    <textarea name="name" rows="10" cols="30"></textarea><br>
-    <label>Do you want to submit the form?</label>
-    <input type="checkbox" id="submit" ><br>
-    <input type="submit"> <button><a href="index.html">Back</a></button>
+        <button>Submit</button>
   </table>
   </form>
+  <button><a href="index.html">Back</a></button>
 </body>
 
 </html>
