create race marathon registraton page

--- a/marathon.html
+++ b/marathon.html
@@ -14,11 +14,26 @@
         <input type="text" name="Last Name" id="lname">
         <p>
             <h4>Select a race</h4>
-            <input type="radio" id="race" name="Fun Race 5k">
-            <label for="race">Fun Race 5k</label>
-            <input type="radio" id="race">
+           <p> <label for="race1">Fun Race 5k</label>
+            <input type="radio" id="race1" name="race"></p>
+           <p> <label for="race2">Half Marathon</label>
+            <input type="radio" id="race2" name="race"></p>
+           <p> <label for="race3">Full marathon</label>
+            <input type="radio" name="race" id="race3"></p>
         </p>
-
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required>
+        <label for="psw">Password</label>
+        <input type="password" id="psw" name="password" required>
+        <p>
+            <label for="age">Select Age Group</label>
+            <select name="age" id="age">
+                <option value="age">under 18</option>
+                <option value="age">18-30</option>
+                <option value="age">30-50</option>
+                <option value="age">50+</option>
+            </select>
+        </p>
     </form>
 </body>
 </html>
