--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <p> <form action="/size"> 
     <p>
         <input type="checkbox" id="agree" name="agree to t&c">
-        <label for="agree">I Agree all the T&C</label>
+        <label for="agree" id="agree">I Agree all the T&C</label>
     </p>
           <label for="XS">XS</label>
          <input type="radio" name="size" id="XS" value="xs">
@@ -124,8 +124,8 @@
          <p>
 
           <h2>Select menu</h2>
-      <label for="days">Choose a day</label>
-      <select name="days" id="days">
+      <label for="days" id="dayy">Choose a day</label>
+      <select name="days" id="dayy">
         <option value="">---Please Choose a Day---</option>
         <option value="Mon">Monday</option>
         <option value="Tue">Tuesday</option>
