--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <hr>
   <!-- make list of hobbies -->
   <h3>Hobbies</h3>
-  <ul>
+  <ul class="bluetable">
     <li>Gaming</li>
     <li>coding</li>
   </ul>
@@ -94,6 +94,15 @@
         <input type="text" name="q">
         <button>Search Reddit</button>
       </form>
+      <!--Paragraph-->
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure repudiandae minus quae temporibus reiciendis minima nemo sint? Quas corrupti itaque id cum magni, officiis nobis! Dolor quod voluptate qui quis!
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit facere explicabo inventore maxime laudantium id mollitia cupiditate rem alias. Perspiciatis, iure numquam asperiores sapiente perferendis aut consequuntur recusandae eius soluta?
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti inventore possimus molestias officiis, eius vero eligendi dicta cumque excepturi voluptatibus facilis ratione non doloremque commodi harum. Ratione ad tenetur quia?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint non debitis ut voluptas voluptates quo facilis, quidem neque corporis voluptate sit consectetur hic tenetur reprehenderit, expedita possimus nam. Molestiae, inventore.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta nulla architecto nisi, velit sit quos officiis alias. Optio libero ullam harum voluptatem veniam corporis iusto ut. Asperiores qui provident earum?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, aliquid vel? Non assumenda, cumque voluptatibus ratione impedit eveniet exercitationem inventore at quisquam? Maiores doloremque a eos dolore optio ab possimus.
+        long-te
+      </p>
   <!--google search-->
       <H2>Google search</H2>
       <form action="https://www.google.com/search">
@@ -101,7 +110,7 @@
         <button>Search Google</button>
       </form>
   <!-- download button-->
-  <h3>Refrences</h3>
+  <h3 class="green">Refrences</h3>
   <a download href="https://web.stanford.edu/group/csp/cs21/htmlcheatsheet.pdf">Cheatsheet</a>
     <br>
   <hr>
@@ -140,7 +149,34 @@
         </select> 
         <button>submit</button>
         <p><a href="marathon.html">Race Registration!</a></p>
-        
+        <h2>Chess maze</h2>
+        <div id="board">
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+          <div class="square"></div>
+        </div>
 
 
 
