--- a/index.html
+++ b/index.html
@@ -177,8 +177,7 @@
           <div class="square"></div>
           <div class="square"></div>
         </div>
-
-
+   <a href="index1.html">boarder page</a>
 
 
 
