--- a/index1.html
+++ b/index1.html
@@ -9,21 +9,11 @@
 </head>
 
 <body>
-    <h1>Hello! <span>:)</span></h1>
-    <div id="one">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit magni pariatur, odio voluptates esse
-        veniam.
-        Quos omnis, necessitatibus beatae architecto sint inventore dicta vero magni. Dicta rem ipsam accusamus atque.
-    </div>
-    <div id="two">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit magni pariatur, odio voluptates esse
-        veniam.
-        Quos omnis, necessitatibus beatae architecto sint inventore dicta vero magni. Dicta rem ipsam accusamus atque.
-    </div>
-    <div id="three">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit magni pariatur, odio voluptates
-        esse veniam.
-        Quos omnis, necessitatibus beatae architecto sint inventore dicta vero magni. Dicta rem ipsam accusamus atque.
-    </div>
-
-    <button>Pad Me!</button>
+    <div class="card">
+        <img alt="" src="https://assets.codepen.io/123865/dog.png">
+        <h1>I Am Dog</h1>
+      </div>
+<button><a href="index.html">go back</a></button>
 
 </body>
 
