--- a/index1.html
+++ b/index1.html
@@ -4,17 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Box Model Demo</title>
+    <title>Stylist personal site</title>
     <link rel="stylesheet" href="app.css">
+    <link rel="icon" href="image\stylist.ico">
 </head>
 
-<body>
-    <div class="card">
-        <img alt="" src="https://assets.codepen.io/123865/dog.png">
-        <h1>I Am Dog</h1>
-      </div>
-<button><a href="index.html">go back</a></button>
+<body  >
+<div class="">
+    <img class="top-cloud" src="image\cloud.png" alt="cloud-img">
+    <h1>Deepanshu Sharma</h1>
+    <img class="bottom-cloud" src="image\cloud.png" alt="cloud-img">
+    <img src="image\mountain.png" alt="mountain-img">
+</div>
 
+  
+</div>
+
+
+
+
+
+<!--<button><a href="index.html">go back</a></button>-->
 </body>
 
 </html>
